# witty

./: .gitignore  README.adoc  install.sh
hangman/: .gitignore  CMakeLists.txt  README.md  script_build.sh  script_build_and_run.sh  script_run.sh
hello/: CMakeLists.txt  README.md  script_run.sh
mytest/: CMakeLists.txt  application.cpp  application.h  main.cpp  script_build.sh  script_run.sh
mytest/approot/: text.xml
mytest/cmake/: FindWt.cmake
